fixed spacing in footer for landing page

--- a/app/assets/stylesheets/pages/_root_page.scss
+++ b/app/assets/stylesheets/pages/_root_page.scss
@@ -21,6 +21,6 @@
 }
 
 .landing-page-footer {
-  padding-top: 20px;
+  padding-top: 60px;
   text-align: center;
 }
